--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="lets_go_exp">Lets Go Explore!</string>
     <string name="image">image</string>
     <string name="my_collection">My Collection</string>
+    <string name="map">Map</string>
 </resources>
